--- a/index.html
+++ b/index.html
@@ -3,13 +3,8 @@
     <head>
         <title>Neill N Silva III - Boston, MA</title>
     </head>
-    <body ng-init="names=[]">
-        Names:
-        <input type="text" ng-model="names" />
-        <br>
-        <ul>
-            <li ng-repeat="nameList in names">{{ nameList }}</li>
-        </ul>
+    <body>
+
 
         <script type="text/javascript" src="lib/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="lib/angular.min.js"></script>
