--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <link rel="stylesheet" href="assets/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/css/font-awesome.css" />
 
+    <!-- Libraries -->
+    <script type="text/javascript" src="lib/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="lib/bootstrap.js"></script>
+    <script type="text/javascript" src="lib/angular.js"></script>
+    <script type="text/javascript" src="lib/angular-route.js"></script>
+
+    <!-- Application JS -->
+    <script src="assets/js/app.js"></script>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <base href="/">
 
     <title>Neill Silva - Boston, MA - Software Developer</title>
 </head>
@@ -21,9 +32,9 @@
             </div>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-                <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
-                <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
+                <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
+                <li><a href="/about"><i class="fa fa-shield"></i> About</a></li>
+                <li><a href="/contact"><i class="fa fa-comment"></i> Contact</a></li>
             </ul>
         </div>
         </nav>
@@ -31,15 +42,10 @@
 
     <!-- Injected Partials display below -->
     <div id="main">
-        {{ message }}
+        <!-- Content will be shown in this div -->
+        <div ng-view></div>
     </div>
 
-    <!-- Libraries -->
-    <script type="text/javascript" src="lib/angular.min.js"></script>
-    <script type="text/javascript" src="lib/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="lib/bootstrap.js"></script>
 
-    <!-- Application JS -->
-    <script src="assets/js/app.js"></script>
 </body>
 </html>
