--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Content will be shown in this div -->
         <div ng-view></div>
 
-            <div class="bottomnav">
+            <div class="wrap bottomnav">
                 <p>
                     <div class="ftobj expandUp expandUp1"><a href="http://github.com/neill"><i class="fa fa-github fa-3x"></i></a></div>
                     <div class="ftobj expandUp expandUp2"><a href="http://linkedin.com/in/neillsilva"><i class="fa fa-linkedin-square fa-3x"></i></a></div>
