--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                     <div class="ftobj expandUp expandUp1"><a href="http://github.com/neill"><i class="fa fa-github fa-3x"></i></a></div>
                     <div class="ftobj expandUp expandUp2"><a href="http://linkedin.com/in/neillsilva"><i class="fa fa-linkedin-square fa-3x"></i></a></div>
                     <div class="ftobj expandUp expandUp3"><a href="http://twitter.com/neillsilva"><i class="fa fa-twitter-square fa-3x"></i></a></div>
-                    <div class="ftobj2 expandUp expandUp3"><a href="/about">ABOUT ME</a></div>
-                    <div class="ftobj2 expandUp expandUp3"><a href="/contact">CONTACT ME</a></div>
+                    <div class="ftobj2 expandUp expandUp3"><a href="/about" class="link">ABOUT ME</a></div>
+                    <div class="ftobj2 expandUp expandUp3"><a href="/contact" class="link">CONTACT ME</a></div>
                 </p>
             </div>
     </div>
